--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,7 +3,9 @@
 <div class="grid grid-pad">
   <a class="col-1-4" *ngFor="let hero of heroes">
     <div class="module hero">
-      <h4>{{hero.name}}</h4>
+      <h4 routerLink="/heroes/{{hero.id}}">{{hero.name}}</h4>
     </div>
   </a>
+
+  
 </div>
