--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,10 +1,10 @@
 
 <h2>My Heroes</h2>
 <ul class="heroes">
-  <li *ngFor="let hero of heroes" (click)="onSelect(hero)" [class.selected]="hero === selectedHero">
-    <span class="badge">{{hero.id}}</span> {{hero.name}}
-  </li>
+  
+    <li *ngFor="let hero of heroes" >
+      <a routerLink="/heroes/{{hero.id}}"><span class="badge">{{hero.id}}</span> {{hero.name}}</a>
+    </li>
 </ul>
 
-<sw-hero-detail [hero]="selectedHero"></sw-hero-detail>
 
